--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,13 @@
     
     <repositories>
         <repository>
-            <id>central</id>
-            <name>bintray</name>
+            <id>jcenter</id>
+            <name>jcenter-bintray</name>
             <url>http://jcenter.bintray.com</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
     
